Closed
Bug 1459441
Opened 7 years ago
Closed 7 years ago
Firefox 61 breaks Fancybox
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla62
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox59 | --- | unaffected |
firefox60 | --- | unaffected |
firefox61 | + | verified |
firefox62 | + | verified |
People
(Reporter: felix, Assigned: mattwoodrow)
References
(Blocks 1 open bug, )
Details
(Keywords: regression)
Attachments
(3 files)
2.72 MB,
video/webm
|
Details | |
252.18 KB,
image/png
|
Details | |
59 bytes,
text/x-review-board-request
|
mstange
:
review+
RyanVM
:
approval-mozilla-beta+
|
Details |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:61.0) Gecko/20100101 Firefox/61.0
Build ID: 20180503152818
Steps to reproduce:
1. Upgrade Firefox 61.0b1 (happens on 61.0b2 and Nightly 61.0a1 as well)
2. Open https://fancyapps.com/fancybox/3/ and click on a lightbox-enabled image
Actual results:
The lightbox jumps between foreground and background (see video)
Expected results:
The container for the lightbox should stay on top (it has a z-index of 99992 set in the CSS). This used to work up to including FF 60.
Reporter | ||
Comment 1•7 years ago
|
||
This is not a Fancybox-exclusive problem as well. I'm seeing the same behaviour on Netflix where things that should be in the background suddenly are visible (the "Dany Boon" poster in the screenshot).
Comment 2•7 years ago
|
||
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0
20180505220904
The regression range from mozregression-gui doesn't make much sense to me. I don't see how a backout of developer tools code could cause this. Yet I double-checked and got the same result.
https://hg.mozilla.org/integration/autoland/json-pushes?changeset=d112cf7b2b60e6244099dc3b599a2444ba0d1da3&full=1
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Untriaged → Layout
Flags: needinfo?(apavel)
Keywords: regression
OS: Unspecified → All
Product: Firefox → Core
Hardware: Unspecified → All
Comment 3•7 years ago
|
||
And now I've triple-checked. I manually downloaded the "first with" and "last without" from https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60 and tested each in a brand new profile.
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=00bdc9451be6557ccce1492b9b966d4435615380&tochange=9a2eac450781b026b42c44ca8f0f92bb0846b6e2
(In reply to Gingerbread Man from comment #3)
> And now I've triple-checked. I manually downloaded the "first with" and
> "last without" from https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60
> and tested each in a brand new profile.
What were the URLs and changesets for those two builds?
Comment 5•7 years ago
|
||
(In reply to David Baron :dbaron: ⌚️UTC-7 from comment #4)
> (In reply to Gingerbread Man from comment #3)
> > And now I've triple-checked. I manually downloaded the "first with" and
> > "last without" from https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60
> > and tested each in a brand new profile.
>
> What were the URLs and changesets for those two builds?
Is this what you are looking for https://bugzilla.mozilla.org/show_bug.cgi?id=1450360#c16 ?
Also, please read https://bugzilla.mozilla.org/show_bug.cgi?id=1450360#c22 i guess it might be helpful.
Thanks.
Flags: needinfo?(apavel)
Comment 6•7 years ago
|
||
(In reply to David Baron :dbaron: ⌚️UTC-7 from comment #4)
> (In reply to Gingerbread Man from comment #3)
> > And now I've triple-checked. I manually downloaded the "first with" and
> > "last without" from https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60
> > and tested each in a brand new profile.
>
> What were the URLs and changesets for those two builds?
The changesets are already listed at the link you quoted, aren't they? It says 00bdc9451be6 last without, ff0efa4132f0 first with. If that's not it, where should I look? Pushlog at comment 3 is based on the about:buildconfig links.
Last without
https://archive.mozilla.org/pub/firefox/nightly/2018/04/2018-04-03-22-00-40-mozilla-central/firefox-61.0a1.en-US.win64.zip
First with
https://archive.mozilla.org/pub/firefox/nightly/2018/04/2018-04-04-10-01-27-mozilla-central/firefox-61.0a1.en-US.win64.zip
OK, I was confused by comment 2, which seems to say that you know that *exactly* https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60 is responsible ("I don't see how a backout of developer tools code could cause this.").
The ranges in the last line of comment 3 and the range implied by the first line of comment 3 and by comment 6 are still different, though. The range implied by the first line of comment 3, or by comment 6 range is narrower than the last line of comment 3's and is just:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=00bdc9451be6557ccce1492b9b966d4435615380&tochange=ff0efa4132f0efd78af0910762aec7dcc1a8de66
Comment 8•7 years ago
|
||
regression-window |
Narrowed it a bit more to: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=7c2423c6e9d0d22b1db406db1f81fbab2a0b02ef&tochange=dd31fb345c11732432fa61a7d8a1b727d41b4a1c
Given that and that layout.display-list.retain = false fixes this, I'm going to guess bug 1443027.
Blocks: 1443027
Status: UNCONFIRMED → NEW
Component: Layout → Layout: Web Painting
Ever confirmed: true
Flags: needinfo?(matt.woodrow)
Comment 9•7 years ago
|
||
(In reply to David Baron :dbaron: ⌚️UTC-7 from comment #7)
> OK, I was confused by comment 2, which seems to say that you know that
> *exactly* https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60 is
> responsible ("I don't see how a backout of developer tools code could cause
> this.").
* It's not that I know, it's that testing with mozregression-gui 3 times yielded the same pushlog at comment 2. I found that dubious, and comment 8 confirms this. I must've hit either bug 1254812 or bug 1256379 (or maybe the latter is a dupe of the former).
* If I use the full log to manually piece together a push log, this is the result:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=6415ccbf739f36f71548540bd92c3b86ab9e1529&tochange=d112cf7b2b60e6244099dc3b599a2444ba0d1da3
* Yes, https://hg.mozilla.org/mozilla-central/rev/d112cf7b2b60 lists different changesets than the about:buildconfig page in those builds it links to, with the pushlogs based on the former being narrower than the latter. I don't know why.
Updated•7 years ago
|
status-firefox59:
--- → unaffected
status-firefox60:
--- → unaffected
status-firefox61:
--- → affected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
tracking-firefox61:
--- → +
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Priority: -- → P2
Comment hidden (mozreview-request) |
Updated•7 years ago
|
Comment 11•7 years ago
|
||
mozreview-review |
Comment on attachment 8974577 [details]
Bug 1459441 - Make sure we build the full display list when we have blend containers in order to get the correct sorting for them.
https://reviewboard.mozilla.org/r/242924/#review249360
Attachment #8974577 -
Flags: review?(mstange) → review+
Comment 12•7 years ago
|
||
An example of a large real-world site using fancybox is iXBT.com, a russian-language hi-tech news and articles site. E.g. click the first image here to see the glitches caused by the Firefox 61+ bug:
https://www.ixbt.com/news/2018/05/13/boston-dynamics-spotmini.html
Comment 13•7 years ago
|
||
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9a2af4dad811
Make sure we build the full display list when we have blend containers in order to get the correct sorting for them. r=mstange
Comment 14•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Updated•7 years ago
|
Flags: in-testsuite? → in-testsuite+
Assignee | ||
Comment 15•7 years ago
|
||
Comment on attachment 8974577 [details]
Bug 1459441 - Make sure we build the full display list when we have blend containers in order to get the correct sorting for them.
Approval Request Comment
[Feature/Bug causing the regression]: Retained-dl
[User impact if declined]: Incorrect z-order sorting for modifications made with mix-blend-mode content.
[Is this code covered by automated tests?]: Yes, new reftest added.
[Has the fix been verified in Nightly?]: Reftest passes.
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: Bug 1461812
[Is the change risky?]: No.
[Why is the change risky/not risky?]: Abandons retained-dl in the presence of mix-blend-mode, falls back to the non-retained code.
[String changes made/needed]: None.
Attachment #8974577 -
Flags: approval-mozilla-beta?
Comment 16•7 years ago
|
||
Comment on attachment 8974577 [details]
Bug 1459441 - Make sure we build the full display list when we have blend containers in order to get the correct sorting for them.
Retained display list fix needed for the feature to ship in Fx61. Approved for 61.0b6.
Attachment #8974577 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 17•7 years ago
|
||
bugherder uplift |
Comment 18•7 years ago
|
||
Build ID: 20180516220130
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:62.0) Gecko/20100101 Firefox/62.0
Verified as fixed on Firefox Nightly 62.0a1 on Windows 10 x 64, Windows 7 x32, Mac OS X 10.12 and Ubuntu 16.04 x64.
Comment 19•7 years ago
|
||
Build ID: 20180517141400
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0
Verified as fixed on 61.0b6 Firefox on Windows 10 x 64, Windows 7 x32, Mac OS X 10.12 and Ubuntu 16.04 x64.
You need to log in
before you can comment on or make changes to this bug.
Description
•