Bug 1459441 - Make sure we build the full display list when we have blend containers in order to get the correct sorting for them. r=mstange

MozReview-Commit-ID: ECTU7enMb1r